added wallpapers + new wallpaper

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Downloads/wallpaper.jpg
+preload = ~/wallpapers/mocha/eva.png
 
-wallpaper = HDMI-A-1,~/Downloads/wallpaper.jpg
-wallpaper = DP-1,~/Downloads/wallpaper.jpg
+wallpaper = HDMI-A-1,~/wallpapers/mocha/eva.png
+wallpaper = DP-1,~/wallpapers/mocha/eva.png
