--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/wallpapers/mocha/eva.png
+preload = ~/wallpapers/mocha/eva_1.png
 
-wallpaper = HDMI-A-1,~/wallpapers/mocha/eva.png
-wallpaper = DP-1,~/wallpapers/mocha/eva.png
+wallpaper = HDMI-A-1,~/wallpapers/mocha/eva_1.png
+wallpaper = DP-1,~/wallpapers/mocha/eva_1.png
