updated some things and did some maintenance

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source= ~/.config/hypr/mocha.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-1, highres@highrr, 0x0, 1, bitdepth, 8
-monitor = HDMI-A-1, highres@highrr, auto-right, 1, bitdepth, 8
+monitor = HDMI-A-2, highres@highrr, auto-right, 1, bitdepth, 8
 
 ###################
 ### MY PROGRAMS ###
@@ -48,7 +48,7 @@ $lock = hyprlock
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar
 exec-once = exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/scripts/evremap.sh
 
@@ -158,11 +158,11 @@ workspace = 2, monitor:DP-1
 workspace = 3, monitor:DP-1
 workspace = 4, monitor:DP-1
 workspace = 5, monitor:DP-1
-workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:HDMI-A-1
-workspace = 8, monitor:HDMI-A-1 
-workspace = 9, monitor:HDMI-A-1
-workspace = 10, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-2
+workspace = 7, monitor:HDMI-A-2
+workspace = 8, monitor:HDMI-A-2 
+workspace = 9, monitor:HDMI-A-2
+workspace = 10, monitor:HDMI-A-2
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
