added more papers and waypaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,6 +49,7 @@ $lock = hyprlock
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar
+exec-once = waypaper --restore
 exec-once = exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/scripts/evremap.sh
 
