more wallpapers and style tweaks

--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/dotfiles/wallpapers
 monitors = All
-wallpaper = ~/dotfiles/wallpapers/mocha/my-neighbor-totoro-sunflowers.png
+wallpaper = ~/dotfiles/wallpapers/mocha/koi.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
