--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/dotfiles/wallpapers
 monitors = All
-wallpaper = ~/dotfiles/wallpapers/mocha/koi.jpg
+wallpaper = ~/dotfiles/wallpapers/mocha/disco.png
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
@@ -14,7 +14,7 @@ show_hidden = False
 show_gifs_only = False
 zen_mode = False
 post_command = 
-number_of_columns = 3
+number_of_columns = 5
 swww_transition_type = any
 swww_transition_step = 63
 swww_transition_angle = 0
