removed mommy and added some wallpapers and some minor tweaks

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -238,7 +238,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod SHIFT, L, exec, $lock
 
-bind = , Print, exec, flameshot gui
+bind = , Print, exec, hyprshot -m region --clipboard-only
+bind = $mainMod, Print, exec, hyprshot -m region
 
 #bind = ,XF86MonBrightnessUp, exec, brightnessctl set 10%+
 #bind = ,XF86MonBrightnessUp, exec, brightnessctl set 10%-
