--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/dotfiles/wallpapers
 monitors = All
-wallpaper = ~/dotfiles/wallpapers/berserk/guts griffith split.png
+wallpaper = ~/dotfiles/wallpapers/mocha/bunnies-road.png
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
@@ -24,4 +24,5 @@ mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
 stylesheet = /home/syd/.config/waypaper/style.css
+keybindings = ~/.config/waypaper/keybindings.ini
 
