--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,8 @@ source= ~/.config/hypr/mocha.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-1, highres@highrr, 0x0, 1, bitdepth, 8
-monitor = HDMI-A-2, highres@highrr, auto-right, 1, bitdepth, 8
+monitor = DP-1, 1920x1080@144, 0x0, 1, bitdepth, 8
+monitor = HDMI-A-2, 1920x1080@75, auto-right, 1, bitdepth, 8
 
 ###################
 ### MY PROGRAMS ###
