--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,6 +52,7 @@ exec-once = waybar
 exec-once = waypaper --restore
 exec-once = exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/scripts/evremap.sh
+exec-once = dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
