--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/dotfiles/wallpapers
 monitors = All
-wallpaper = ~/dotfiles/wallpapers/mocha/panes.jpg
+wallpaper = ~/dotfiles/wallpapers/mocha/bunnies-road.png
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
