changed evremap and some other things too lol

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,8 @@ monitor = HDMI-A-2, 1920x1080@75, auto-right, 1, bitdepth, 8
 # Set programs that you use
 $terminal = wezterm
 $fileManager = dolphin
-$menu = wofi --conf ~/dotfiles/.config/wofi/config/config --style ~/dotfiles/.config/wofi/src/mocha/style.css
+# $menu = wofi --conf ~/dotfiles/.config/wofi/config/config --style ~/dotfiles/.config/wofi/src/mocha/style.css
+$menu = walker
 $lock = hyprlock
 
 #################
@@ -53,6 +54,7 @@ exec-once = waypaper --restore
 exec-once = exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/scripts/evremap.sh
 exec-once = dunst
+exec-once = elephant
 
 #############################
 ### ENVIRONMENT VARIABLES ###
